<?xml version="1.0" encoding="utf-8"?><!--
 Copyright (C) 2010 ZXing authors
 Copyright 2011 Robert Theis

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
<resources>
    <!-- Strings related to Common -->
    <string name="app_name">Receipt Keeper</string>
    <string name="submit_button_text">Submit</string>

    <!-- Strings related to Welcome -->
    <string name="go_to_ocr">Go to OCR</string>
    <string name="go_to_login_page">Go to Login Page</string>
    <string name="welcome_screen_text">Welcome to Receipt Keeper</string>
    <string name="sign_in_button_text">SIGN IN</string>
    <string name="sign_up_button_text">SIGN UP</string>

    <!-- String related to Add receipt Activity -->
    <string name="store_name">Store</string>
    <string name="date">Date</string>
    <string name="total">Total</string>
    <string name="save">Save</string>
    <string name="home_activity">HomeActivity</string>
    <string name="receipt_id">Receipt id</string>
    <string name="tag">Tag</string>
    <string name="category">Category</string>
    <string name="comment">Comment</string>
    <string name="payment">Payment</string>


    <!-- Strings related to login -->
    <string name="auto_login">Auto login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_user_not_signed_in">It needs to be signed in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="signin_progress_message">Signing in...</string>
    <string name="signup_progress_message">Signing up...</string>
    <string name="upload_progress_message">Uploading...</string>
    <string name="signup_success_message">Success to sign up!!!</string>
    <string name="signin_success_message">Welcome!!! </string>
    <string name="save_fail_login_message">Error during signin for saving! Please try again later</string>
    <string name="nothing_to_save_message">Nothing to Upload!</string>
    <string name="save_fail_save_message">Error during saving! Please try again later</string>
    <string name="save_fail_image_message">Error during image saving! Please try again later</string>
    <string name="sigin_fail_message">Error during sign in! Please try again later</string>
    <string name="signup_fail_message">Error during sign up! Please try again later</string>
    <string name="save_success_message">Success uploading data</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">upload test</string>

    <!-- Strings related to ListView -->
    <string name="no_messages">No Receipt</string>

    <!-- Strings related to OCR -->
    <string name="error_upload_task_create">During upload, there is an error</string>
    <string name="permission_rationale_contact">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="permission_rationale_cam">"External Storage permissions are needed for taking picture
        completions."
    </string>
    <string name="ocr_test">OCR Test</string>


    <!-- Strings related to Menu -->
    <string name="title_to_confirm_exit">Exit Application</string>
    <string name="message_to_confirm_exit">Are you sure you want to exit?</string>


    <!-- Strings related to tag spinner Search-->
    <string name="type_to_search">Type to search</string>
    <string name="search_hint">Search by Tag...</string>
    <string name="tags">Tags</string>

    <string name="title_activity_learn_more">LearnMore</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Sync -->


    <!-- Strings related to Settings -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_header_ocr">OCR &amp; Camera</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="prefs_sum_frequency_sync">Setting how often upload data to server</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string name="pref_title_sync_criteria">Sync Restriction</string>
    <string name="prefs_sum_category_sync">Setting restriction of sync</string>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>0</item>
    </string-array>
    <string-array name="pref_sync_criteria_titles">
        <item>Wi-Fi + Data</item>
        <item>Wi-Fi Only</item>
        <item>Data Only</item>
    </string-array>
    <string-array name="pref_sync_criteria_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="pref_title_ocr_settings">OCR Settings</string>
    <string name="prefs_sum_category_ocr">For detailed settings of OCR</string>
    <string name="image_of_the_receipt">Image of the receipt</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>

    <!-- Strings related to Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login_error">Error in login, please try again later</string>
    <string name="learn_more">Learn More</string>
</resources>
