<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <PreferenceCategory
        android:title="@string/pref_header_data_sync"
        android:key="pref_key_sync_settings">
        <!--<ListPreference-->
            <!--android:defaultValue="360"-->
            <!--android:entries="@array/pref_sync_frequency_titles"-->
            <!--android:entryValues="@array/pref_sync_frequency_values"-->
            <!--android:key="sync_frequency"-->
            <!--android:negativeButtonText="@null"-->
            <!--android:positiveButtonText="@null"-->
            <!--android:title="@string/pref_title_sync_frequency"-->
            <!--android:summary="@string/prefs_sum_frequency_sync"/>-->
        <EditTextPreference android:key="preference_host_address"
                            android:title="Server Address"/>
        <!--<ListPreference-->
            <!--android:defaultValue="1"-->
            <!--android:entries="@array/pref_sync_criteria_titles"-->
            <!--android:entryValues="@array/pref_sync_criteria_values"-->
            <!--android:key="sync_criteria"-->
            <!--android:negativeButtonText="@null"-->
            <!--android:positiveButtonText="@null"-->
            <!--android:title="@string/pref_title_sync_criteria"-->
            <!--android:summary="@string/prefs_sum_category_sync"/>-->
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_ocr"
        android:key="pref_key_ocr_setting">
        <Preference
            android:title="@string/pref_title_ocr_settings"
            android:summary="@string/prefs_sum_category_ocr">
            <intent
                android:targetPackage="com.conestogac.receipt_keeper"
                android:targetClass="com.conestogac.receipt_keeper.SettingsActivity"
                android:action="com.conestogac.receipt_keeper.PREFS_OCR" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
