<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:weightSum="1"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="120dp"
            android:layout_height="120dp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imageButton"
            android:orientation="vertical"
            android:id="@+id/textbox"
            android:layout_marginLeft="5dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/storeNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/totalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textAppearance="?android:attr/textAppearanceSmall" />


            <TextView
                android:id="@+id/idTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ID"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/tags"
                android:id="@+id/tagsTextView" />
        </LinearLayout>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:id="@+id/isSync"
            android:layout_gravity="center_vertical"
            android:layout_alignParentRight="false"
            android:clickable="false"
            android:background="@android:color/holo_green_dark"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/textbox"/>
    </RelativeLayout>




</LinearLayout>